# Classifying-US-Firms-into-Trade-Peace-and-Trade-War-Stocks-an-NLP-Analysis-of-Earnings-Calls

./: .gitignore  README.md  dataframe_splitter.py  main.py  main_custom_models.py  pyproject.toml
data/: us_daily_tpu_data.csv  zero_shot_classification_results_human_label.xlsx
src/: analysis_orchestrator.py  config.py  data_earnings_calls_transcripts.py  data_loader.py  descriptive_stats.py  nlp_models.py  statistical_analysis.py  transform.py  utilities.py  visualization.py
