[project]
name = "project-nlp-tariffs-sensitivity-of-stocks"
version = "0.1.0"
description = ""
authors = [
    {name = "Enzo Montariol",email = "enzo.montariol@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "pyarrow (>=21.0.0,<22.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

